--- a/index.html
+++ b/index.html
@@ -18,15 +18,19 @@
             <div id="board"></div>
             <div class="button">
                 <!-- <button class="left" onclick="">left</button> -->
-                <i class="arrow left">🢀</i>
+                <!-- <i class="arrow left">🢀</i>-->
+                 <button class="arrow left">🢀</button>
                 <div class="site">
                     <!-- <button class="up" onclick="">up</button> -->
-                    <i class="arrow up">🢁</i>
-                    <i class="arrow down">🢃</i>
+                    <!-- <i class="arrow up">🢁</i> -->
+                    <button class="arrow up">🢁</button>
+                    <!-- <i class="arrow down">🢃</i> -->
+                     <button class="arrow down">🢃</button>
                     <!-- <button class="down" onclick="">down</button> -->
                 </div>
                 <!-- <button class="right" onclick="">right</button> -->
-                <i class="arrow right">🢂</i>
+                <!-- <i class="arrow right">🢂</i> -->
+                 <button class="arrow right">></button>
             </div>
 
 
