--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
             <div class="button">
                 <!-- <button class="left" onclick="">left</button> -->
                 <!-- <i class="arrow left">🢀</i>-->
-                 <button class="arrow left">🢀</button>
+                 <button class="arrow left"><</button>
                 <div class="site">
                     <!-- <button class="up" onclick="">up</button> -->
                     <!-- <i class="arrow up">🢁</i> -->
-                    <button class="arrow up">🢁</button>
+                    <button class="arrow up">^</button>
                     <!-- <i class="arrow down">🢃</i> -->
-                     <button class="arrow down">🢃</button>
+                     <button class="arrow down">⇩</button>
                     <!-- <button class="down" onclick="">down</button> -->
                 </div>
                 <!-- <button class="right" onclick="">right</button> -->
