--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <!-- <i class="arrow up">🢁</i> -->
                     <button class="arrow up">^</button>
                     <!-- <i class="arrow down">🢃</i> -->
-                     <button class="arrow down">⇩</button>
+                     <button class="arrow down">v</button>
                     <!-- <button class="down" onclick="">down</button> -->
                 </div>
                 <!-- <button class="right" onclick="">right</button> -->
